--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "~4.7.4",
     "vite": "^4.1.3",
     "vitest": "^0.28.5",
+    "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.1.5"
   }
 }
